[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dsl2html"
version = "0.1.2"
authors = [
  { name="Yi Xing", email="blandilyte@gmail.com" },
]
description = "DSL to HTML conversion"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: C++",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Crissium/python-dsl"